Using Rounded Corners and fixing broken CSS for h1

--- a/style.css
+++ b/style.css
@@ -544,6 +544,7 @@ div.mainA{
     margin-top: -30px*/
     background-color: #b3b3b3;
     box-shadow: 5px 5px 10px #888888;
+    border-radius: 9px 9px 9px 9px;
     /*border: 3px solid #5900b3;*/
 }
 
@@ -592,6 +593,11 @@ div.supplement {
     /*font-family: 'Amiko', serif;*/
     line-height: 1.3;
 }
+
+h1 {
+    font-family: Raleway;
+    color: #5900b3;
+} 
 
 h1.research {
     font-family: Raleway;
